syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.inventory_service.grpc";
option java_outer_classname = "InventoryServiceProto";

package inventory;

service InventoryService {
  rpc CheckStock (StockRequest) returns (StockResponse);
  rpc ReduceStock(ReduceStockRequest) returns (ReduceStockResponse);
}

  message  ReduceStockRequest{
    int64 itemId = 1;
    int32  quantity =2;
  }

message ReduceStockResponse{
  bool  success =1;
  string  message = 2;
}

message StockRequest {
  int32 itemId = 1;
  int32  quantity=2;
}

message StockResponse {
  int32 quantity = 1;
}