syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.order_service.grpc";
option java_outer_classname = "OrderProto";

package order;

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string status = 1;
  string message = 2;
}